# map_generator

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
MapGenerator/: Slider.py  __init__.py
OsuMapGenerator/: MapGenerator.py  Slider.py
demos/: demo0.py
examples/: run_make_test_map.py
scripts/: clean.bat
src/: MapGenerator.py  Slider.py  __init__.py
